- Thu Oct 28 2010 Ira Weiny <weiny2@llnl.gov>

	* : tag 1.1.4-2
	* : Add sierra-force-QDR.sh
	* : Add ibmad_renice for sierra

- Thu Oct 18 2010 Ira Weiny <weiny2@llnl.gov>

	* : ibtraceroute: update help message

- Thu Oct 07 2010 Ira Weiny <weiny2@llnl.gov>

	* : ibtraceroute: 
		  update ibtraceroute with multicast functionality 
		  also default the "from" node to the current running node

- Thu Oct 07 2010 Ira Weiny <weiny2@llnl.gov>

	* : tag 1.1.4-1
	* : ibgraphfabric.c: fix partial scan of fabric

- Thu Oct 07 2010 Albert Chu <chu11@llnl.gov>

	* : support comma separated output in lfts_sort.pl
	* : support 36 or 24 port switches in lfts_sort.pl

- Fri Sep 10 2010 Ira Weiny <weiny2@llnl.gov>

	* : tag 1.1.3-1
	* : ibhcacounters.8.in: Add man page
	* : ibhcacounters: Add card name to output

- Thu Sep 09 2010 Ira Weiny <weiny2@llnl.gov>

	* : ibsrp.8.in: fixed config file location
	* : ibtrackerrors.8.in: Add ibtrackerrors man page
	* : ibtrackerrors.in: Fix help message
	* : ibtrackerrors.in: Add config file support
	* : pragmatic-IB.conf: Add config file

- Wed Sep 08 2010 Ira Weiny <weiny2@llnl.gov>

	* : tag 1.1.2-2
	* : ibcheckfabric.in: fix incorrect reporting
	* : ibtrackerrors.in: Allow for correct error names from spec

- Mon Aug 23 2010 Ira Weiny <weiny2@llnl.gov>

	* : tag 1.1.2-1
	* : ibtrackerrors.in: add stderr output to log file.

- Thu Aug 19 2010 Ira Weiny <weiny2@llnl.gov>

	* : ibtrackerrors.in: allow additional erros to be suppressed
	* : ibhcacounters: remove message which says this only works on ConnectX

- Fri Aug 06 2010 Ira Weiny <weiny2@llnl.gov>

	* : tag 1.1.1-1
	* : ibtrackerrors: Add support to limit the scan to switches only

- Mon Aug 02 2010 Albert Chu <chu11@llnl.gov>

	* : add check_wiring_sierra.pl

- Tue Jul 29 2010 Ira Weiny <weiny2@llnl.gov>

	* : tag 1.1.0-2
	* : ibnodesinmcast: Allow for consolidated MLID's without consolidated MGID's
	* : ibtraceroute: use absolute path for rdma_cm_query
